@@ -42,6 +42,7 @@
 #define IDS_GSA_CODE_WARNING            38
 #define IDS_INVALID_CBA_CODE            39
 #define IDS_CBA_CODE_WARNING            40
+#define IDS_OUT_OF_MEMORY               41
 #define IDI_ICON                        101
 #define IDD_REGISTERS                   102
 #define IDD_DEBUG                       103
